- Fixed pagination dropdown in widgets. Disabled auto overflow, which was causing the widget's body to stretch instead of letting the dropdown extend beyond the widget's field. - Fixed a unit test "PaginationTest", which stopped working with new dropdown

--- a/app/styles/style.scss
+++ b/app/styles/style.scss
@@ -217,7 +217,7 @@ a:hover {
     bottom: 15px;
     left: 0px;
     right: 0px;
-    overflow: auto;
+    overflow: visible;
     padding: 15px;
 
     &.noHeader {
